[gd_scene load_steps=7 format=3 uid="uid://dcrd50q7r2100"]

[ext_resource type="PackedScene" uid="uid://dalyetdhjh33m" path="res://scenes/player/Player.tscn" id="2_quoct"]
[ext_resource type="Resource" uid="uid://b4yqekkhiep33" path="res://assets/resources/player1_movement.tres" id="3_0br7j"]
[ext_resource type="Resource" uid="uid://dbrabrlg3j6nx" path="res://assets/resources/player2_movement.tres" id="4_e7fnx"]
[ext_resource type="Script" path="res://scripts/game/game_manager.gd" id="5_fa5sv"]
[ext_resource type="PackedScene" uid="uid://lsjb0tkxg8k0" path="res://scenes/objects/switch_platform/switch_platform.tscn" id="6_6dt16"]
[ext_resource type="PackedScene" uid="uid://bgd44l8eq2mv3" path="res://scenes/objects/level_complete_zone/level_complete_zone.tscn" id="6_jcjpi"]

[node name="Level2" type="Node2D"]

[node name="Player1" parent="." instance=ExtResource("2_quoct")]
position = Vector2(4, -38)
controls = ExtResource("3_0br7j")
color = Color(0.2596, 0.88, 0.0528, 1)

[node name="Player2" parent="." instance=ExtResource("2_quoct")]
position = Vector2(120, 371)
controls = ExtResource("4_e7fnx")
current_dimension = 1
color = Color(0.709804, 0, 0, 1)

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("5_fa5sv")

[node name="LevelCompleteZone" parent="." instance=ExtResource("6_jcjpi")]
position = Vector2(728, -8)

[node name="LevelCompleteZone2" parent="." instance=ExtResource("6_jcjpi")]
position = Vector2(729, 390)

[node name="SwitchPlatform" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(-40, 20)

[node name="SwitchPlatform2" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(80, 420)
current_dimension = 1

[node name="SwitchPlatform3" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(190, 20)

[node name="SwitchPlatform4" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(330, 420)
current_dimension = 1

[node name="SwitchPlatform5" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(440, 20)

[node name="SwitchPlatform6" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(590, 420)
current_dimension = 1

[node name="SwitchPlatform7" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(689, 419)

[node name="SwitchPlatform8" parent="." instance=ExtResource("6_6dt16")]
position = Vector2(690, 26)
